# terraform-modules

./: .pre-commit-config.yaml  .tflint.hcl  README.md  pyproject.toml
modules/aws_s3_bucket/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
modules/github_organization/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
modules/github_repository/: README.md  main.tf  providers.tf  variables.tf
modules/github_repository/files_templates/: CODEOWNERS_template  README_template
